feat: Adding classes for JWT Authentication.